--- a/less/dlx.less
+++ b/less/dlx.less
@@ -1,472 +1,8 @@
-// VARIABLES
-@cdn:  'https://cdn.digitallinguistics.io';
-
-// COLORS
-@wugblue:                                        #6FD1F6;
-.wugblue                     { color:            @wugblue; }
-.wugblue-background          { background-color: @wugblue; }
-
-@verydarkblue:                                   #017CF2;
-@darkblue:                                       #0F89FF;
-@blue:                                           #3399FF;
-@lightblue:                                      #5CAFFF;
-@verylightblue:                                  #88C4FE;
-
-.verydarkblue                { color:            @verydarkblue; }
-.darkblue                    { color:            @darkblue; }
-.blue                        { color:            @blue; }
-.lightblue                   { color:            @lightblue; }
-.verylightblue               { color:            @verylightblue; }
-
-.verydarkblue-background     { background-color: @verydarkblue; color: white; }
-.darkblue-background         { background-color: @darkblue; color: white; }
-.blue-background             { background-color: @blue; color: white; }
-.lightblue-background        { background-color: @lightblue; }
-.verylightblue-background    { background-color: @verylightblue; }
-
-@gray:                                           #F5F2F0;
-@grey:                                           @gray;
-.gray                        { color:            @gray; }
-.gray-background             { background-color: @gray; }
-
-@verylightgreen:                                 #7FFED1;
-@lightgreen:                                     #4FFFC1;
-@green:                                          #23FFB1;
-@darkgreen:                                      #00FFA5;
-@verydarkgreen:                                  #00F39D;
-@superdarkgreen:                                 #00AB6E;
-
-.verylightgreen              { color:            @verylightgreen; }
-.lightgreen                  { color:            @lightgreen; }
-.green                       { color:            @green; }
-.darkgreen                   { color:            @darkgreen; }
-.verydarkgreen               { color:            @verydarkgreen; }
-.superdarkgreen              { color:            @superdarkgreen; }
-
-.verylightgreen-background   { background-color: @verylightgreen; }
-.lightgreen-background       { background-color: @lightgreen; }
-.green-background            { background-color: @green; }
-.darkgreen-background        { background-color: @darkgreen; }
-.verydarkgreen-background    { background-color: @verydarkgreen; }
-.superdarkgreen-background   { background-color: @superdarkgreen; color: white; }
-
-@verylightorange:                                #FFA97F;
-@lightorange:                                    #FF884F;
-@orange:                                         #FF6A23;
-@darkorange:                                     #FF5300;
-
-.verylightorange             { color:            @verylightorange; }
-.lightorange                 { color:            @lightorange; }
-.orange                      { color:            @orange; }
-.darkorange                  { color:            @darkorange; }
-
-.verylightorange-background  { background-color: @verylightorange; }
-.lightorange-background      { background-color: @lightorange; }
-.orange-background           { background-color: @orange; }
-.darkorange-background       { background-color: @darkorange; color: white; }
-
-@verylightpurple:                                #9791FE;
-@lightpurple:                                    #7068FF;
-@purple:                                         #4D42FF;
-@darkpurple:                                     #2A1DFF;
-@verydarkpurple:                                 #1002F4;
-
-.verylightpurple             { color:            @verylightpurple; }
-.lightpurple                 { color:            @lightpurple; }
-.purple                      { color:            @purple; }
-.darkpurple                  { color:            @darkpurple; }
-.verydarkpurple              { color:            @verydarkpurple; }
-
-.verylightpurple-background  { background-color: @verylightpurple; }
-.lightpurple-background      { background-color: @lightpurple; color: white; }
-.purple-background           { background-color: @purple; color: white; }
-.darkpurple-background       { background-color: @darkpurple; color: white; }
-.verydarkpurple-background   { background-color: @verydarkpurple; color: white; }
-
-@verylightred:                                   #FF9797;
-@lightred:                                       #E96363;
-@red:                                            #CA3C3C;
-@darkred:                                        #AA1F1F;
-@verydarkred:                                    #830505;
-
-.verylightred                { color:            @verylightred; }
-.lightred                    { color:            @lightred; }
-.red                         { color:            @red; }
-.darkred                     { color:            @darkred; }
-.verydarkred                 { color:            @verydarkred; }
-
-.verylightred-background     { background-color: @verylightred; }
-.lightred-background         { background-color: @lightred; }
-.red-background              { background-color: @red; color: white; }
-.darkred-background          { background-color: @darkred; color: white; }
-.verydarkred-background      { background-color: @verydarkred; color: white; }
-
-@lightblue-transparent:                          rgba(92, 175, 255, 0.2);
-@verylightblue-transparent:                      rgba(136, 196, 254, 0.2);
-
-.lightblue-transparent       { background-color: @lightblue-transparent; }
-.verylightblue-transparent   { background-color: @verylightblue-transparent; }
-
-// GLOBAL
-body {
-  box-sizing: border-box;
-  font-family: 'Fira Sans', 'Arial', sans-serif;
-  line-height: 1.5;
-}
-
-// CLASSES
-abbr {
-  font-style: italic;
-}
-
-.bulleted {
-
-  list-style: disc outside none;
-  margin-left: 1.5em;
-
-  li {
-    display: list-item;
-  }
-
-}
-
-.button {
-
-  .blue-background;
-  background-image: linear-gradient(135deg, rgba(255,255,255,0.15), transparent);
-  border-radius: 5px;
-  box-shadow: inset -1px -1px 2px 0px rgba(0,0,0,0.15), 1px 1px 2px #ccc;
-  cursor: pointer;
-  padding: 0.25em 0.5em;
-
-  &:active {
-    box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset, 0 0 6px rgba(0,0,0,0.2) inset;
-  }
-
-  &:hover, &:focus {
-    background-image: linear-gradient(135deg, transparent, rgba(0,0,0,0.15));
-  }
-
-  &:disabled {
-    background-image: none;
-    box-shadow: none;
-    cursor: not-allowed;
-    opacity: 0.40;
-  }
-
-}
-
-button {
-  .button;
-}
-
-cite {
-  font-style: italic;
-}
-
-code {
-  .gray-background;
-  border: 1px solid black;
-  border-radius: 5px;
-  font-family: 'Fira Mono', 'Monaco', 'Courier New', monospace;
-  font-size: 0.75em;
-  font-style: normal;
-  overflow-x: auto;
-  padding: 0.25em;
-  white-space: pre;
-}
-
-dfn {
-  font-style: italic;
-}
-
-em {
-  font-style: italic;
-}
-
-.field {
-
-  background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: inset 0 1px 2px #ddd;
-  cursor: text;
-  padding: 0.125em 0.25em;
-
-  &:focus {
-
-    border-color: @blue;
-    box-shadow: inset 0px 1px 2px @blue;
-
-    &:invalid {
-      border-color: @darkred;
-      box-shadow: inset 0px 1px 2px @darkred;
-      color: @red;
-    }
-
-  }
-
-  &[disabled] {
-    background-color: #eaeded;
-    color: #cad2d3;
-    cursor: not-allowed;
-  }
-
-}
-
-fieldset legend {
-  font-weight: bold;
-}
-
-.hanging {
-  margin-left: 1em;
-  text-indent: -1em;
-}
-
-input[type=button] {
-  .button;
-}
-
-input[type=color] {
-  display: block;
-}
-
-input[type=date] {
-  .field;
-  flex-direction: row; // Chrome
-}
-
-input[type=datetime] {
-  .field;
-}
-
-input[type=datetime-local] {
-  .field;
-  flex-direction: row; // Chrome
-}
-
-input[type=email] {
-  .field;
-}
-
-input[type=file] {
-  flex-direction: row; // Edge
-}
-
-input[type=month] {
-  .field;
-  flex-direction: row; // Chrome
-}
-
-input[type=number] {
-  .field;
-}
-
-input[type=password] {
-  .field;
-}
-
-input[type=reset] {
-  .button;
-  .superdarkgreen-background;
-}
-
-input[type=search] {
-  .field;
-}
-
-input[type=submit] {
-  .button;
-}
-
-input[type=tel] {
-  .field;
-}
-
-input[type=text] {
-  .field;
-  display: flex;
-}
-
-input[type=time] {
-  .field;
-  flex-direction: row; // Chrome
-}
-
-input[type=url] {
-  .field;
-}
-
-input[type=week] {
-  .field;
-  flex-direction: row; // Chrome
-}
-
-label {
-
-  align-items: center;
-  flex-direction: row;
-
-  span {
-    font-size: smaller;
-    font-weight: bold;
-  }
-
-  input {
-    margin: 0.5em;
-  }
-
-}
-
-.link {
-  .blue;
-  border-bottom: 0.075em solid transparent;
-  &:link { .blue; }
-  &:visited { .purple; }
-  &:hover { border-bottom: 0.075em solid @blue; }
-  &:active { .blue; }
-  &:visited:hover { border-bottom: 0.075em solid @purple; }
-  &:visited:active { .purple; }
-}
-
-  // elements whose contents are typically inline
-  blockquote, button, caption, dd, dt, figcaption, h1, h2, h3, h4, h5, h6, input, legend, option, output, p, pre, select, summary, textarea,
-  // inline elements
-  abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var, {
-    > a {
-      .link;
-    }
-  }
-
-.minor-header {
-  font-size: 1.25em;
-}
-
-.numbered {
-
-  counter-reset: numbered;
-  list-style: none;
-
-  li {
-
-    counter-increment: numbered;
-    display: list-item;
-
-    &::before {
-      content: counter(numbered) '.';
-      font-weight: bold;
-      padding: 0.5em;
-    }
-
-  }
-
-}
-
-.page-title {
-  font-size: 2.5em;
-}
-
-.reference-list {
-
-  a { .link; }
-  h1 { .section-header; }
-
-  ol, ul {
-    list-style: disc outside none;
-    padding: 0.5em 0em;
-    padding-left: 1.5em;
-  }
-
-  li {
-    display: list-item;
-    padding: 0.25em 0em;
-
-    p {
-      display: block;
-      margin-left: 1.5em;
-      text-indent: -1.5em;
-    }
-
-  }
-
-}
-
-.section-header {
-  font-size: 1.75em;
-  font-weight: bold;
-  padding-bottom: 0.25em;
-  padding-top: 0.5em;
-}
-
-select {
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 0.25em;
-}
-
-strong {
-  color: @verydarkblue;
-  font-weight: bold;
-}
-
-.subsection-header {
-  font-size: 1.5em;
-  padding-bottom: 0.25em;
-  padding-top: 0.5em;
-}
-
-.subsubsection-header {
-  font-size: 1.5em;
-  font-style: italic;
-}
-
-textarea {
-  .field;
-}
-
-.tooltip {
-
-  position: relative;
-
-  &::after {
-    .verydarkgreen-background;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px #ccc;
-    content: attr(title);
-    font-size: smaller;
-    left: 0.5em;
-    opacity: 0;
-    position: absolute;
-    top: 115%;
-    transition: all 0.3s ease;
-    width: 300px;
-    z-index: 2;
-  }
-
-  &:hover::after,
-  &:focus::after,
-  {
-    opacity: 1;
-    padding: 0.5em 1em;
-  }
-
-}
-
-  // elements whose contents are typically inline
-  blockquote, button, caption, dd, dt, figcaption, h1, h2, h3, h4, h5, h6, input, legend, option, output, p, pre, select, summary, textarea,
-  // inline elements
-  abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var, {
-    > .tooltip {
-      text-decoration: underline dotted @verydarkgreen;
-    }
-  }
-
-.white-link {
-  border-bottom: 0.075em solid transparent;
-  color: white;
-  &:link { color: white; }
-  &:visited { color: white; }
-  &:hover { border-bottom: 0.075em solid white; }
-  &:visited:hover { border-bottom: 0.075em solid white; }
-  &:active { color: white; }
-}
+/*
+This file bundles together all the DLx stylesheets into a single LESS/CSS file. NB: The import order is important.
+ */
+
+@import 'less/fonts.less';
+@import 'less/colors.less';
+@import 'less/classes.less';
+@import 'less/global.less';
