update import links

--- a/less/classes.less
+++ b/less/classes.less
@@ -2,10 +2,10 @@
 This file contains DLx styles that need to be explicitly specified using classes
  */
 
-@import (reference) 'less/colors.less';
+ // VARIABLES
+ @cdn:  'https://cdn.digitallinguistics.io';
 
-// VARIABLES
-@cdn:  'https://cdn.digitallinguistics.io';
+@import (reference) '@{cdn}/less/colors.less';
 
 // COLOR CLASSES
 .wugblue                    { color:            @wugblue; }
