--- a/less/fonts.less
+++ b/less/fonts.less
@@ -2,16 +2,16 @@
 This file declares @font-face rules for each of the fonts used in DLx projects
  */
 
-@cdn: 'https://cdn.digitallinguistics.io';
+@fonts: 'https://cdn.digitallinguistics.io/fonts';
 
 // Fira Sans
 @font-face {
   font-family: 'Fira Sans';
   src:
     local('Fira Sans'),
-    url('@{cdn}/fonts/FiraSans-Light.woff2') format('woff2'),
-    url('@{cdn}/fonts/FiraSans-Light.woff') format('woff'),
-    url('@{cdn}/fonts/FiraSans-Light.ttf') format('truetype');
+    url('@{fonts}/FiraSans-Light.woff2') format('woff2'),
+    url('@{fonts}/FiraSans-Light.woff') format('woff'),
+    url('@{fonts}/FiraSans-Light.ttf') format('truetype');
   font-style: normal;
   font-weight: normal;
 }
@@ -20,9 +20,9 @@ This file declares @font-face rules for each of the fonts used in DLx projects
   font-family: 'Fira Sans';
   src:
     local('Fira Sans Light Italic'),
-    url('@{cdn}/fonts/FiraSans-LightItalic.woff2') format('woff2'),
-    url('@{cdn}/fonts/FiraSans-LightItalic.woff') format('woff'),
-    url('@{cdn}/fonts/FiraSans-LightItalic.ttf') format('truetype');
+    url('@{fonts}/FiraSans-LightItalic.woff2') format('woff2'),
+    url('@{fonts}/FiraSans-LightItalic.woff') format('woff'),
+    url('@{fonts}/FiraSans-LightItalic.ttf') format('truetype');
   font-style: italic;
   font-weight: normal;
 }
@@ -31,9 +31,9 @@ This file declares @font-face rules for each of the fonts used in DLx projects
   font-family: 'Fira Sans';
   src:
     local('Fira Sans Medium'),
-    url('@{cdn}/fonts/FiraSans-Medium.woff2') format('woff2'),
-    url('@{cdn}/fonts/FiraSans-Medium.woff') format('woff'),
-    url('@{cdn}/fonts/FiraSans-Medium.ttf') format('truetype');
+    url('@{fonts}/FiraSans-Medium.woff2') format('woff2'),
+    url('@{fonts}/FiraSans-Medium.woff') format('woff'),
+    url('@{fonts}/FiraSans-Medium.ttf') format('truetype');
   font-style: normal;
   font-weight: bold;
 }
@@ -42,9 +42,9 @@ This file declares @font-face rules for each of the fonts used in DLx projects
   font-family: 'Fira Sans';
   src:
     local('Fira Sans Medium Italic'),
-    url('@{cdn}/fonts/FiraSans-MediumItalic.woff2') format('woff2'),
-    url('@{cdn}/fonts/FiraSans-MediumItalic.woff') format('woff'),
-    url('@{cdn}/fonts/FiraSans-MediumItalic.ttf') format('truetype');
+    url('@{fonts}/FiraSans-MediumItalic.woff2') format('woff2'),
+    url('@{fonts}/FiraSans-MediumItalic.woff') format('woff'),
+    url('@{fonts}/FiraSans-MediumItalic.ttf') format('truetype');
   font-style: italic;
   font-weight: bold;
 }
@@ -54,9 +54,9 @@ This file declares @font-face rules for each of the fonts used in DLx projects
   font-family: 'Fira Mono';
   src:
     local('Fira Mono Regular'),
-    url('@{cdn}/fonts/FiraMono-Regular.woff2') format('woff2'),
-    url('@{cdn}/fonts/FiraMono-Regular.woff') format('woff'),
-    url('@{cdn}/fonts/FiraMono-Regular.ttf') format('truetype');
+    url('@{fonts}/FiraMono-Regular.woff2') format('woff2'),
+    url('@{fonts}/FiraMono-Regular.woff') format('woff'),
+    url('@{fonts}/FiraMono-Regular.ttf') format('truetype');
   font-style: normal;
   font-weight: normal;
 }
@@ -65,9 +65,9 @@ This file declares @font-face rules for each of the fonts used in DLx projects
   font-family: 'Fira Mono';
   src:
     local('Fira Mono Bold'),
-    url('@{cdn}/fonts/FiraMono-Bold.woff2') format('woff2'),
-    url('@{cdn}/fonts/FiraMono-Bold.woff') format('woff'),
-    url('@{cdn}/fonts/FiraMono-Bold.ttf') format('truetype');
+    url('@{fonts}/FiraMono-Bold.woff2') format('woff2'),
+    url('@{fonts}/FiraMono-Bold.woff') format('woff'),
+    url('@{fonts}/FiraMono-Bold.ttf') format('truetype');
   font-style: normal;
   font-weight: bold;
 }
@@ -77,9 +77,9 @@ This file declares @font-face rules for each of the fonts used in DLx projects
   font-family: 'Gentium Plus';
   src:
     local('Gentium Plus Regular'),
-    url('@{cdn}/fonts/GentiumPlus-R.woff2') format('woff2'),
-    url('@{cdn}/fonts/GentiumPlus-R.woff') format('woff'),
-    url('@{cdn}/fonts/GentiumPlus-R.ttf') format('truetype');
+    url('@{fonts}/GentiumPlus-R.woff2') format('woff2'),
+    url('@{fonts}/GentiumPlus-R.woff') format('woff'),
+    url('@{fonts}/GentiumPlus-R.ttf') format('truetype');
   font-style: normal;
   font-weight: normal;
 }
@@ -88,9 +88,9 @@ This file declares @font-face rules for each of the fonts used in DLx projects
   font-family: 'Gentium Plus';
   src:
     local('Gentium Plus Italic'),
-    url('@{cdn}/fonts/GentiumPlus-I.woff2') format('woff2'),
-    url('@{cdn}/fonts/GentiumPlus-I.woff') format('woff'),
-    url('@{cdn}/fonts/GentiumPlus-I.ttf') format('truetype');
+    url('@{fonts}/GentiumPlus-I.woff2') format('woff2'),
+    url('@{fonts}/GentiumPlus-I.woff') format('woff'),
+    url('@{fonts}/GentiumPlus-I.ttf') format('truetype');
   font-style: italic;
   font-weight: normal;
 }
